--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./dist/tailwind.css">
 </head>
 
-<body class="antialiased">
+<body class="font-sans antialiased">
 
 </body>
 
